отображение текущего времени после добавления задачи

--- a/index.html
+++ b/index.html
@@ -16,12 +16,37 @@
         <form action="" class="form" id="form">
             <input class="form__input form__input_title" type="text" placeholder="Задача">
             <div class="form__wrapper" id="formList">
-                <input class="form__input" id="addYear" type="number" placeholder="Год">
-                <input class="form__input" id="addMounth" type="number" placeholder="Месяц">
-                <input class="form__input" id="addDay" type="number" placeholder="День">
-                <input class="form__input" id="addHours" type="number" placeholder="Часы">
-                <input class="form__input" id="addMinutes" type="number" placeholder="Минуты">
-                <input class="form__input" id="addSeconds" type="number" placeholder="Секунды">
+                <div class="input__wrap">
+                    <label for="addYear">Год</label>
+                    <input class="form__input" id="addYear" type="number" placeholder="Год">
+                </div>
+                <div class="input__wrap">
+
+                    <label for="addYear">Месяц</label>
+                    <input class="form__input" id="addMounth" type="number" placeholder="Месяц">
+                </div>
+                <div class="input__wrap">
+
+                    <label for="addYear">День</label>
+                    <input class="form__input" id="addDay" type="number" placeholder="День">
+                </div>
+                <div class="input__wrap">
+
+                    <label for="addYear">Часы</label>
+                    <input class="form__input" id="addHours" type="number" placeholder="Часы">
+                </div>
+                <div class="input__wrap">
+
+
+                    <label for="addYear">Минуты</label>
+                    <input class="form__input" id="addMinutes" type="number" placeholder="Минуты">
+                </div>
+                <div class="input__wrap">
+
+                    <label for="addYear">Секунды</label>
+                    <input class="form__input" id="addSeconds" type="number" placeholder="Секунды">
+                </div>
+
             </div>
             <button class="button" id="addTaskButton" type="submit">Создать</button>
         </form>
